# fork-tagger

./: .env.example  .gitignore  Cargo.toml  Dockerfile  state.toml
.github/workflows/: publish.yml
src/: config.rs  main.rs  state.rs
