[package]
name = "fork-tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
octocrab = "0.48.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
